src/metadslx.compiler/src/generated/java/metadslx/compiler/MetaModelParser.java
// Generated from MetaModelParser.g4 by ANTLR 4.5.1
package metadslx.compiler;

import metadslx.core.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MetaModelParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KNamespace=1, KUsing=2, KMetamodel=3, KExtern=4, KTypeDef=5, KAbstract=6, 
		KClass=7, KEnum=8, KAssociation=9, KContainment=10, KWith=11, KNew=12, 
		KNull=13, KTrue=14, KFalse=15, KVoid=16, KObject=17, KString=18, KInt=19, 
		KLong=20, KFloat=21, KDouble=22, KByte=23, KBool=24, KList=25, KAny=26, 
		KNone=27, KError=28, KSet=29, KMultiList=30, KMultiSet=31, KThis=32, KTypeof=33, 
		KAs=34, KIs=35, KBase=36, KConst=37, KRedefines=38, KSubsets=39, KReadonly=40, 
		KLazy=41, KSynthetized=42, KInherited=43, KDerived=44, KStatic=45, TSemicolon=46, 
		TColon=47, TDot=48, TComma=49, TAssign=50, TOpenParen=51, TCloseParen=52, 
		TOpenBracket=53, TCloseBracket=54, TOpenBrace=55, TCloseBrace=56, TLessThan=57, 
		TGreaterThan=58, TQuestion=59, TQuestionQuestion=60, TAmpersand=61, THat=62, 
		TBar=63, TAndAlso=64, TOrElse=65, TPlusPlus=66, TMinusMinus=67, TPlus=68, 
		TMinus=69, TTilde=70, TExclamation=71, TSlash=72, TAsterisk=73, TPercent=74, 
		TLessThanOrEqual=75, TGreaterThanOrEqual=76, TEqual=77, TNotEqual=78, 
		TAsteriskAssign=79, TSlashAssign=80, TPercentAssign=81, TPlusAssign=82, 
		TMinusAssign=83, TLeftShiftAssign=84, TRightShiftAssign=85, TAmpersandAssign=86, 
		THatAssign=87, TBarAssign=88, IdentifierNormal=89, IdentifierVerbatim=90, 
		IntegerLiteral=91, DecimalLiteral=92, ScientificLiteral=93, DateTimeOffsetLiteral=94, 
		DateTimeLiteral=95, DateLiteral=96, TimeLiteral=97, RegularStringLiteral=98, 
		GuidLiteral=99, UTF8BOM=100, WHITESPACE=101, CRLF=102, LINEBREAK=103, 
		LINE_COMMENT=104, COMMENT=105;
	public static final int
		RULE_main = 0, RULE_qualifiedName = 1, RULE_identifierList = 2, RULE_qualifiedNameList = 3, 
		RULE_annotation = 4, RULE_annotationParams = 5, RULE_annotationParamList = 6, 
		RULE_annotationParam = 7, RULE_namespaceDeclaration = 8, RULE_metamodelDeclaration = 9, 
		RULE_metamodelPropertyList = 10, RULE_metamodelProperty = 11, RULE_declaration = 12, 
		RULE_enumDeclaration = 13, RULE_enumValues = 14, RULE_enumValue = 15, 
		RULE_enumMemberDeclaration = 16, RULE_classDeclaration = 17, RULE_classAncestors = 18, 
		RULE_classAncestor = 19, RULE_classMemberDeclaration = 20, RULE_fieldDeclaration = 21, 
		RULE_fieldModifier = 22, RULE_redefinitions = 23, RULE_subsettings = 24, 
		RULE_nameUseList = 25, RULE_constDeclaration = 26, RULE_functionDeclaration = 27, 
		RULE_returnType = 28, RULE_typeOfReference = 29, RULE_typeReference = 30, 
		RULE_simpleType = 31, RULE_classType = 32, RULE_objectType = 33, RULE_primitiveType = 34, 
		RULE_voidType = 35, RULE_invisibleType = 36, RULE_nullableType = 37, RULE_collectionType = 38, 
		RULE_collectionKind = 39, RULE_operationDeclaration = 40, RULE_parameterList = 41, 
		RULE_parameter = 42, RULE_constructorDeclaration = 43, RULE_initializerDeclaration = 44, 
		RULE_synthetizedPropertyInitializer = 45, RULE_inheritedPropertyInitializer = 46, 
		RULE_expressionList = 47, RULE_expressionOrNewExpressionList = 48, RULE_expressionOrNewExpression = 49, 
		RULE_expression = 50, RULE_literalExpression = 51, RULE_newExpression = 52, 
		RULE_newPropertyInitList = 53, RULE_newPropertyInit = 54, RULE_postOperator = 55, 
		RULE_preOperator = 56, RULE_unaryOperator = 57, RULE_multiplicativeOperator = 58, 
		RULE_additiveOperator = 59, RULE_shiftOperator = 60, RULE_comparisonOperator = 61, 
		RULE_equalityOperator = 62, RULE_assignmentOperator = 63, RULE_associationDeclaration = 64, 
		RULE_identifier = 65, RULE_literal = 66, RULE_nullLiteral = 67, RULE_booleanLiteral = 68, 
		RULE_integerLiteral = 69, RULE_decimalLiteral = 70, RULE_scientificLiteral = 71, 
		RULE_stringLiteral = 72;
	public static final String[] ruleNames = {
		"main", "qualifiedName", "identifierList", "qualifiedNameList", "annotation", 
		"annotationParams", "annotationParamList", "annotationParam", "namespaceDeclaration", 
		"metamodelDeclaration", "metamodelPropertyList", "metamodelProperty", 
		"declaration", "enumDeclaration", "enumValues", "enumValue", "enumMemberDeclaration", 
		"classDeclaration", "classAncestors", "classAncestor", "classMemberDeclaration", 
		"fieldDeclaration", "fieldModifier", "redefinitions", "subsettings", "nameUseList", 
		"constDeclaration", "functionDeclaration", "returnType", "typeOfReference", 
		"typeReference", "simpleType", "classType", "objectType", "primitiveType", 
		"voidType", "invisibleType", "nullableType", "collectionType", "collectionKind", 
		"operationDeclaration", "parameterList", "parameter", "constructorDeclaration", 
		"initializerDeclaration", "synthetizedPropertyInitializer", "inheritedPropertyInitializer", 
		"expressionList", "expressionOrNewExpressionList", "expressionOrNewExpression", 
		"expression", "literalExpression", "newExpression", "newPropertyInitList", 
		"newPropertyInit", "postOperator", "preOperator", "unaryOperator", "multiplicativeOperator", 
		"additiveOperator", "shiftOperator", "comparisonOperator", "equalityOperator", 
		"assignmentOperator", "associationDeclaration", "identifier", "literal", 
		"nullLiteral", "booleanLiteral", "integerLiteral", "decimalLiteral", "scientificLiteral", 
		"stringLiteral"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'namespace'", "'using'", "'metamodel'", "'extern'", "'typedef'", 
		"'abstract'", "'class'", "'enum'", "'association'", "'containment'", "'with'", 
		"'new'", "'null'", "'true'", "'false'", "'void'", "'object'", "'string'", 
		"'int'", "'long'", "'float'", "'double'", "'byte'", "'bool'", "'list'", 
		"'any'", "'none'", "'error'", "'set'", "'multi_list'", "'multi_set'", 
		"'this'", "'typeof'", "'as'", "'is'", "'base'", "'const'", "'redefines'", 
		"'subsets'", "'readonly'", "'lazy'", "'synthetized'", "'inherited'", "'derived'", 
		"'static'", "';'", "':'", "'.'", "','", "'='", "'('", "')'", "'['", "']'", 
		"'{'", "'}'", "'<'", "'>'", "'?'", "'??'", "'&'", "'^'", "'|'", "'&&'", 
		"'||'", "'++'", "'--'", "'+'", "'-'", "'~'", "'!'", "'/'", null, "'%'", 
		"'<='", "'>='", "'=='", "'!='", "'*='", "'/='", "'%='", "'+='", "'-='", 
		"'<<='", "'>>='", "'&='", "'^='", "'|='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "KNamespace", "KUsing", "KMetamodel", "KExtern", "KTypeDef", "KAbstract", 
		"KClass", "KEnum", "KAssociation", "KContainment", "KWith", "KNew", "KNull", 
		"KTrue", "KFalse", "KVoid", "KObject", "KString", "KInt", "KLong", "KFloat", 
		"KDouble", "KByte", "KBool", "KList", "KAny", "KNone", "KError", "KSet", 
		"KMultiList", "KMultiSet", "KThis", "KTypeof", "KAs", "KIs", "KBase", 
		"KConst", "KRedefines", "KSubsets", "KReadonly", "KLazy", "KSynthetized", 
		"KInherited", "KDerived", "KStatic", "TSemicolon", "TColon", "TDot", "TComma", 
		"TAssign", "TOpenParen", "TCloseParen", "TOpenBracket", "TCloseBracket", 
		"TOpenBrace", "TCloseBrace", "TLessThan", "TGreaterThan", "TQuestion", 
		"TQuestionQuestion", "TAmpersand", "THat", "TBar", "TAndAlso", "TOrElse", 
		"TPlusPlus", "TMinusMinus", "TPlus", "TMinus", "TTilde", "TExclamation", 
		"TSlash", "TAsterisk", "TPercent", "TLessThanOrEqual", "TGreaterThanOrEqual", 
		"TEqual", "TNotEqual", "TAsteriskAssign", "TSlashAssign", "TPercentAssign", 
		"TPlusAssign", "TMinusAssign", "TLeftShiftAssign", "TRightShiftAssign", 
		"TAmpersandAssign", "THatAssign", "TBarAssign", "IdentifierNormal", "IdentifierVerbatim", 
		"IntegerLiteral", "DecimalLiteral", "ScientificLiteral", "DateTimeOffsetLiteral", 
		"DateTimeLiteral", "DateLiteral", "TimeLiteral", "RegularStringLiteral", 
		"GuidLiteral", "UTF8BOM", "WHITESPACE", "CRLF", "LINEBREAK", "LINE_COMMENT", 
		"COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MetaModelParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MetaModelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MainContext extends ParserRuleContext {
		public NamespaceDeclarationContext namespaceDeclaration() {
			return getRuleContext(NamespaceDeclarationContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaModelParserListener ) ((MetaModelParserListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaModelParserListener ) ((MetaModelParserListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaModelParserVisitor ) return ((MetaModelParserVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			namespaceDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QualifiedNameContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<TerminalNode> TDot() { return getTokens(MetaModelParser.TDot); }
		public TerminalNode TDot(int i) {
			return getToken(MetaModelParser.TDot, i);
		}
		public QualifiedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaModelParserListener ) ((MetaModelParserListener)listener).enterQualifiedName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaModelParserListener ) ((MetaModelParserListener)listener).exitQualifiedName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaModelParserVisitor ) return ((MetaModelParserVisitor<? extends T>)visitor).visitQualifiedName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QualifiedNameContext qualifiedName() throws RecognitionException {
		QualifiedNameContext _localctx = new QualifiedNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_qualifiedName);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			identifier();
			setState(153);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(149);
					match(TDot);
					setState(150);
					identifier();
					}
					} 
				}
				setState(155);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierListContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<TerminalNode> TComma() { return getTokens(MetaModelParser.TComma); }
		public TerminalNode TComma(int i) {
			return getToken(MetaModelParser.TComma, i);
		}
		public IdentifierListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaModelParserListener ) ((MetaModelParserListener)listener).enterIdentifierList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaModelParserListener ) ((MetaModelParserListener)listener).exitIdentifierList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaModelParserVisitor ) return ((MetaModelParserVisitor<? extends T>)visitor).visitIdentifierList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierListContext identifierList() throws RecognitionException {
		IdentifierListContext _localctx = new IdentifierListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifierList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			identifier();
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TComma) {
				{
				{
				setState(157);
				match(TComma);
				setState(158);
				identifier();
				}
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QualifiedNameListContext extends ParserRuleContext {
		public List<QualifiedNameContext> qualifiedName() {
			return getRuleContexts(QualifiedNameContext.class);
		}
		public QualifiedNameContext qualifiedName(int i) {
			return getRuleContext(QualifiedNameContext.class,i);
		}
		public List<TerminalNode> TComma() { return getTokens(MetaModelParser.TComma); }
		public TerminalNode TComma(int i) {
			return getToken(MetaModelParser.TComma, i);
		}
		public QualifiedNameListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedNameList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaModelParserListener ) ((MetaModelParserListener)listener).enterQualifiedNameList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaModelParserListener ) ((MetaModelParserListener)listener).exitQualifiedNameList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaModelParserVisitor ) return ((MetaModelParserVisitor<? extends T>)visitor).visitQualifiedNameList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QualifiedNameListContext qualifiedNameList() throws RecognitionException {
		QualifiedNameListContext _localctx = new QualifiedNameListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_qualifiedNameList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			qualifiedName();
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TComma) {
				{
				{
				setState(165);
				match(TComma);
				setState(166);
				qualifiedName();
				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationContext extends ParserRuleContext {
		public TerminalNode TOpenBracket() { return getToken(MetaModelParser.TOpenBracket, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode TCloseBracket() { return getToken(MetaModelParser.TCloseBracket, 0); }
		public AnnotationParamsContext annotationParams() {
			return getRuleContext(AnnotationParamsContext.class,0);
		}
		public AnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaModelParserListener ) ((MetaModelParserListener)listener).enterAnnotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaModelParserListener ) ((MetaModelParserListener)listener).exitAnnotation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaModelParserVisitor ) return ((MetaModelParserVisitor<? extends T>)visitor).visitAnnotation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnnotationContext annotation() throws RecognitionException {
		AnnotationContext _localctx = new AnnotationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_annotation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(TOpenBracket);
			setState(173);
			identifier();
			setState(175);
			_la = _input.LA(1);
			if (_la==TOpenParen) {
				{
				setState(174);
				annotationParams();
				}
			}

			setState(177);
			match(TCloseBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationParamsContext extends ParserRuleContext {
		public TerminalNode TOpenParen() { return getToken(MetaModelParser.TOpenParen, 0); }
		public TerminalNode TCloseParen() { return getToken(MetaModelParser.TCloseParen, 0); }
		public AnnotationParamListContext annotationParamList() {
			return getRuleContext(AnnotationParamListContext.class,0);
		}
		public AnnotationParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotationParams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaModelParserListener ) ((MetaModelParserListener)listener).enterAnnotationParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaModelParserListener ) ((MetaModelParserListener)listener).exitAnnotationParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaModelParserVisitor ) return ((MetaModelParserVisitor<? extends T>)visitor).visitAnnotationParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnnotationParamsContext annotationParams() throws RecognitionException {
		AnnotationParamsContext _localctx = new AnnotationParamsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_annotationParams);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			match(TOpenParen);
			setState(181);
			_la = _input.LA(1);
			if (_la==IdentifierNormal || _la==IdentifierVerbatim) {
				{
				setState(180);
				annotationParamList();
				}
			}

			setState(183);
			match(TCloseParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationParamListContext extends ParserRuleContext {
		public List<AnnotationParamContext> annotationParam() {
			return getRuleContexts(AnnotationParamContext.class);
		}
		public AnnotationParamContext annotationParam(int i) {
			return getRuleContext(AnnotationParamContext.class,i);
		}
		public List<TerminalNode> TComma() { return getTokens(MetaModelParser.TComma); }
		public TerminalNode TComma(int i) {
			return getToken(MetaModelParser.TComma, i);
		}
		public AnnotationParamListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotationParamList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetaModelParserListener ) ((MetaModelParserListener)listener).enterAnnotationParamList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetaModelParserListener ) ((MetaModelParserListener)listener).exitAnnotationParamList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetaModelParserVisitor ) return ((MetaModelParserVisitor<? extends T>)visitor).visitAnnotationParamList(this);
